--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,10 +1,26 @@
 server:
   port: 3000
 
+logging:
+  level:
+    org:
+      apache:
+        kafka: OFF
+
 spring:
+  kafka:
+    bootstrap-servers: localhost:9092
+    topic:
+      start-saga: start-saga
+      notify-ending: notify-ending
+    consumer:
+      group-id: order-group
+      auto-offset-reset: latest
+
   data:
     mongodb:
       database: admin
       uri: mongodb://admin:admin@localhost:27017/?maxPoolSize=10
+
   banner:
     location: banner.txt
