--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,9 +1,20 @@
 server:
   port: 8080
 
+logging:
+  level:
+    org:
+      apache:
+        kafka: WARN
+
 spring:
   kafka:
     bootstrap-servers: ${KAFKA_BROKER:localhost:9092}
+    topic:
+      start-saga: start-saga
+      orchestrator: orchestrator
+      finish-success: finish-success
+      finish-failure: finish-failure
     consumer:
       group-id: orchestrator-group
       auto-offset-reset: latest
