feat: Consumer Kafka. fix: KafkaTemplate in KafkaProducer, mongodb host in application-dev.yml.

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -20,7 +20,7 @@ spring:
   data:
     mongodb:
       database: order-db
-      uri: ${MONGO_DB_URI:mongodb://admin:admin@order-db:27017/?maxPoolSize=10}
+      uri: ${MONGO_DB_URI:mongodb://admin:admin@localhost:27017/?maxPoolSize=10}
 
   banner:
     location: banner.txt
